apps/cloud-dbeaver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-dbeaver
  namespace: apps
  labels:
    app.kubernetes.io/name: cloud-dbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-dbeaver
  template:
    metadata:
      labels:
        app: cloud-dbeaver
        app.kubernetes.io/name: cloud-dbeaver
    spec:
      containers:
        - name: cloud-dbeaver
          image: dbeaver/cloudbeaver:26.2.1
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 8978
          volumeMounts:
            - name: config
              mountPath: /opt/cloudbeaver/workspace
              subPath: workspace
            - name: config
              mountPath: /opt/cloudbeaver/conf/keys
              subPath: keys
          readinessProbe:
            tcpSocket:
              port: 8978
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8978
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: cloud-dbeaver-config-pvc
