apps/cloud-dbeaver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-dbeaver
  namespace: apps
spec:
  selector:
    app: cloud-dbeaver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
