apps/cloud-dbeaver/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-dbeaver-internal
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
spec:
  rules:
    - host: db.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-dbeaver
                port:
                  number: 8978
  tls:
    - hosts:
        - db.home
      secretName: cloud-dbeaver-internal-tls
